<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 M.Nakamura
 *
 * This software is licensed under a Creative Commons
 * Attribution-NonCommercial-ShareAlike 2.1 Japan License.
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 		http://creativecommons.org/licenses/by-nc-sa/2.1/jp/legalcode
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" 
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin">

	<TextView 
	    android:id="@+id/noon_textView_title"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true" 
		android:text="@string/noon_textView_title"
		android:textAppearance="?android:attr/textAppearanceLarge" />

	<TextView 
	    android:id="@+id/noon_textView_message"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_below="@+id/noon_textView_title"
		android:layout_centerHorizontal="true" 
		android:text="@string/noon_textView_message"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView 
	    android:id="@+id/noon_textView_timer"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_below="@+id/noon_textView_message"
		android:layout_centerHorizontal="true" 
		android:textSize="80sp"
		android:text="" />
		
	<RelativeLayout 
	    android:id="@+id/noon_relative_timer"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_below="@+id/noon_textView_timer"
		android:layout_centerHorizontal="true" 
		android:orientation="horizontal">
		
		<Button android:id="@+id/noon_button_inclement" 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:onClick="onClickInclementButton"
			android:text="@string/noon_button_inclement"
			android:textAppearance="?android:attr/textAppearanceLarge" />
		
		<Button android:id="@+id/noon_button_declement" 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_toRightOf="@+id/noon_button_inclement"
			android:onClick="onClickDeclementkButton"
			android:text="@string/noon_button_declement"
			android:textAppearance="?android:attr/textAppearanceLarge" />
				
		<Button android:id="@+id/noon_button_start" 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_toRightOf="@+id/noon_button_declement"
			android:onClick="onClickStartButton"
			android:text="@string/noon_button_start"
			android:textAppearance="?android:attr/textAppearanceLarge" />
					    		
	</RelativeLayout>

	<Button android:id="@+id/button_ok" 
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true" 
		android:onClick="onClickOkButton"
		android:text="@string/common_text_ok" />

</RelativeLayout>