<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (C) 2013 M.Nakamura
 *
 * This software is licensed under a Creative Commons
 * Attribution-NonCommercial-ShareAlike 2.1 Japan License.
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 		http://creativecommons.org/licenses/by-nc-sa/2.1/jp/legalcode
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/role_relativeLayout_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/role_textView_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/role_textView_number"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/role_button_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:onClick="onClickMaxButton"
                android:text="@string/role_button_max" />

            <RadioGroup
                android:id="@+id/role_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/role_button_max"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/role_radio_none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/role_radio_none" />

                <RadioButton
                    android:id="@+id/role_radio_without_werewolf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/role_radio_without_werewolf" />

                <RadioButton
                    android:id="@+id/role_radio_include_werewolf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/role_radio_include_werewolf" />
            </RadioGroup>
        </RelativeLayout>

        <TableLayout
            android:id="@+id/role_tablelayout_roles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/role_relativeLayout_header"
            android:layout_centerHorizontal="true" >
        </TableLayout>

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/role_tablelayout_roles"
            android:layout_centerHorizontal="true"
            android:onClick="onClickOkButton"
            android:text="@string/common_text_ok" />
    </RelativeLayout>

</ScrollView>