<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 M.Nakamura
 *
 * This software is licensed under a Creative Commons
 * Attribution-NonCommercial-ShareAlike 2.1 Japan License.
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 		http://creativecommons.org/licenses/by-nc-sa/2.1/jp/legalcode
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
	android:orientation="vertical">

	<TextView android:id="@+id/add_player_textView_name"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true" 
		android:layout_alignParentTop="true"
		android:text="@string/add_player_textView_name"
		android:textAppearance="?android:attr/textAppearanceLarge" />

	<EditText android:id="@+id/add_player_editText_player"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true" 
		android:layout_below="@+id/add_player_textView_name"
		android:ems="10" android:inputType="text" />

	<RadioGroup android:id="@+id/add_player_radiogroup"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true" 
		android:layout_below="@+id/add_player_editText_player"
		android:orientation="horizontal">

		<RadioButton android:id="@+id/add_player_radio_male"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="true" 
			android:text="@string/add_player_radio_male" />

		<RadioButton android:id="@+id/add_player_radio_female"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="@string/add_player_radio_female" />

	</RadioGroup>

	<Button android:id="@+id/button_ok" 
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_centerHorizontal="true"
		android:layout_below="@+id/add_player_radiogroup" 
		android:text="@string/common_text_ok"
		android:onClick="onClickOkButton" />

</RelativeLayout>