<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 M.Nakamura
 *
 * This software is licensed under a Creative Commons
 * Attribution-NonCommercial-ShareAlike 2.1 Japan License.
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 		http://creativecommons.org/licenses/by-nc-sa/2.1/jp/legalcode
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/opening" />
    
    <TextView
        android:id="@+id/main_textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_textView_center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
		android:textColor="#fff"
		android:textSize="40sp"
        android:text="@string/app_name" />
    
    <TextView
        android:id="@+id/main_textView_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="" />
    
    <Button
        android:id="@+id/main_button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/main_textView_center"
        android:layout_marginTop="30dp"
        android:onClick="onClickStartButton"
        android:text="@string/main_button_start"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_button_start"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" >

        <Button
            android:id="@+id/main_button_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickPlayerButton"
            android:text="@string/main_button_player" />

        <Button
            android:id="@+id/main_button_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/main_button_player"
            android:onClick="onClickRoleButton"
            android:text="@string/main_button_role" />

        <Button
            android:id="@+id/main_button_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/main_button_role"
            android:onClick="onClickHelpButton"
            android:text="@string/main_button_help" />
    </RelativeLayout>

</RelativeLayout>